syntax = "proto3";

package cline;
import "cline/common.proto";
option go_package = "github.com/cline/grpc-go/cline";
option java_package = "bot.cline.proto";
option java_multiple_files = true;

service CheckpointsService {
  rpc checkpointDiff(Int64Request) returns (Empty);
  rpc checkpointRestore(CheckpointRestoreRequest) returns (Empty);
  rpc getCwdHash(StringArrayRequest) returns (PathHashMap);
}

message CheckpointRestoreRequest {
  Metadata metadata = 1;
  int64 number = 2;
  string restore_type = 3;
  optional int64 offset = 4;
}

message PathHashMap {
  map<string, string> path_hash = 1;
}
